# ftmstore-fastapi

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  async_ddos.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-docker.yml  python.yml
ftmq_api/: api.py  logging.py  query.py  serialize.py  settings.py  store.py  views.py
ftmstore_fastapi/: api.py  cache.py  constants.py  dataset.py  logging.py  query.py  serialize.py  settings.py  store.py  util.py  views.py
tests/: test_api.py  test_query.py
tests/fixtures/: catalog.json  eu_authorities.ftm.json  gdho.ftm.json
