[tool.poetry]
name = "ftmstore-fastapi"
version = "2.1.0"
description = "FastAPI for followthemoney data stores"
authors = ["Simon Wörpel <simon.woerpel@pm.me>"]
license = "GNU"
readme = "README.md"
packages = [{include = "ftmstore_fastapi"}]
homepage = "https://github.com/investigativedata/ftmstore_fastapi"
repository = "https://github.com/investigativedata/ftmstore_fastapi"
documentation = "https://github.com/investigativedata/ftmstore_fastapi"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/investigativedata/ftmstore_fastapi/issues"


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
cachelib = "^0.10.2"
fastapi = {extras = ["all"], version = "<0.100"}
furl = "^2.1.3"
redis = "^5.0.0"
pyicu = "^2.11"
ftmq = "^0.4.0"
structlog = "^23.2.0"
fakeredis = "^2.18.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.10.1"
pre-commit = "^3.5.0"
ipdb = "^0.13.13"
isort = "^5.12.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-env = "^1.0.1"
mypy = "^1.6.0"
coverage = "^7.3.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "FTM_STORE_URI=sqlite:///followthemoney.store",
    "CATALOG=./tests/fixtures/catalog.json",
    "DEBUG=1",
    "CACHE=1"
]
