[tool.poetry]
name = "ftmstore-fastapi"
version = "2.1.1"
description = "FastAPI for followthemoney data stores"
authors = ["Simon Wörpel <simon.woerpel@pm.me>"]
license = "GNU"
readme = "README.md"
packages = [{include = "ftmstore_fastapi"}]
homepage = "https://github.com/investigativedata/ftmstore_fastapi"
repository = "https://github.com/investigativedata/ftmstore_fastapi"
documentation = "https://github.com/investigativedata/ftmstore_fastapi"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/investigativedata/ftmstore_fastapi/issues"


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
cachelib = "^0.13.0"
fastapi = {extras = ["all"], version = "^0.111.0"}
furl = "^2.1.3"
redis = "^5.0.6"
pyicu = "^2.13.1"
ftmq = "^0.6.6"
structlog = "^23.2.0"
fakeredis = "^2.20.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^23.11.0"
pre-commit = "^3.7.1"
ipdb = "^0.13.13"
isort = "^5.12.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-env = "^1.1.1"
mypy = "^1.7.0"
coverage = "^7.3.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "FTM_STORE_URI=sqlite:///followthemoney.store",
    "CATALOG=./tests/fixtures/catalog.json",
    "DEBUG=1",
    "CACHE=1"
]
