[tool.poetry]
name = "ftmstore-fastapi"
version = "2.2.2"
description = "FastAPI for followthemoney data stores"
authors = ["Simon Wörpel <simon.woerpel@pm.me>"]
license = "GNU"
readme = "README.md"
packages = [{ include = "ftmstore_fastapi" }]
homepage = "https://github.com/investigativedata/ftmstore_fastapi"
repository = "https://github.com/investigativedata/ftmstore_fastapi"
documentation = "https://github.com/investigativedata/ftmstore_fastapi"
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/investigativedata/ftmstore_fastapi/issues"


[tool.poetry.dependencies]
python = ">=3.11,<4"
fastapi = "^0.115.0"
furl = "^2.1.3"
pyicu = "^2.14"
ftmq = "^0.6.14"
structlog = "^24.4.0"
anystore = {extras = ["redis"], version = "^0.1.13"}
fakeredis = "^2.26.1"
ftmq-search = "^0.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
pre-commit = "^3.8.0"
ipdb = "^0.13.13"
isort = "^5.12.0"
pytest = "^8.3.2"
pytest-cov = "^6.0.0"
pytest-env = "^1.1.4"
mypy = "^1.11.1"
coverage = "^7.6.7"
bump2version = "^1.0.1"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "FTM_STORE_URI=sqlite:///followthemoney.store",
    "CATALOG=./tests/fixtures/catalog.json",
    "REDIS_DEBUG=1",
    "CACHE=1",
    "ANYSTORE_URI=redis://localhost",
    "FTMQS_URI=sqlite:///followthemoney.store",
]
