[metadata]
name = ftmstore-fastapi
version = file: VERSION
description = Expose a followthemoney-store to a readonly FastAPI
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU
author = Simon Wörpel
author_email = simon.woerpel@medienrevolte.de
url = https://github.com/simonwoerpel/ftmstore-fastapi
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires:
    cachelib==0.10.2
    fastapi[all]==0.91.0
    followthemoney==3.3.0
    followthemoney-store==3.0.3
    furl==2.1.3
    nomenklatura==2.8.0
    PyICU==2.10.2
    structlog==22.3.0

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203, E501
